--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,9 @@ img{
 .border-bottom{
     border-bottom : 1px solid rgba(0, 0, 0, 0.1) !important;
 }
+.border-right{
+    border-right : 1px solid rgba(0, 0, 0, 0.1) !important;
+}
 .last-message{
     font-size: 12px;
     color : black;
