--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,15 @@ img{
     color: black;
     opacity: 0.7;
 }
+.link-size:hover{
+    opacity: 1;
+    
+}
+.date-size{
+    font-size: 8px;
+    color: black;
+    opacity: 0.7;
+}
 .color-icons{
     color: var(--color-icons);
 }
